allow to run a demo as a standalone main (Application.launch)